# meet-transcript

./: .env  .env.example  .gitignore  ANALISIS_TRANSKRIP_SPEAKER.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  run_audio_chunk_debug.py  run_realtime_transcriber.py
.github/workflows/: build-nuitika.yaml
WhisperLive/: docker-compose.cpu.yml  docker-compose.yml  run_client.py  run_server.py
WhisperLive/docker/: Dockerfile.gpu
WhisperLive/requirements/: server.txt
WhisperLive/tests/: test_base_backend.py  test_base_local_agreement.py  test_local_agreement.py  test_postprocessing.py  test_server_prompt_policy.py
WhisperLive/whisper_live/: batch_inference.py  defaults.py  local_agreement.py  postprocessing.py  process_logging.py  server.py  version_policy.py
apps/cli/: CMakeLists.txt
build-gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-gcc-libsoundio/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-gcc-libsoundio/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-gcc/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
config/: app_config.json  app_config.production.example.json  app_config.staging.example.json  settings.py
docs/: PLAN.md
installer/windows/: setup.iss
rttranscriber/: __init__.py  audio_chunk_debug_session.py  audio_models.py  audio_pipeline_facade.py  audio_processing.py  models.py  phase2_pipeline.py  pysoundio_capture.py  pysoundio_microphone_source.py  pysoundio_runtime.py  wav_chunk_writer.py  wav_debug.py
rttranscriber/model/: __init__.py  audio.py  transcription.py
rttranscriber/services/: __init__.py  audio_pipeline.py  capture_sources.py  realtime_transcription.py  transcription_engine.py
rttranscriber/viewmodels/: __init__.py  realtime_session.py
rttranscriber/views/: __init__.py  cli.py  terminal_session_view.py
scripts/: build_windows_local.ps1  ci_smoke_packaged_cli.py  spike_screencapturekit_audio.py
src/: __init__.py  app.py  config.py  main.py  onboarding.py  paths.py  permissions.py  qt_client.py  settings.py  version.py
src/application/: CMakeLists.txt
src/capture/: __init__.py  audio_frame.py  errors.py  mac_sys_audio.py  mic_stream.py  models.py  phase2_smoke.py  queued_stream.py  recorder.py  wav_sink.py  win_loopback.py
src/core/: __init__.py  engine.py
src/desktop/: __init__.py  __main__.py  app.py  session_worker.py
src/domain/: CMakeLists.txt
src/engine/: __init__.py  chunk_queue.py  live_session.py  preprocess_runtime.py  preprocessing.py  transcript_merger.py  transcription_worker.py  vad_filter.py  whisper.py  whisperlive_capture.py  whisperlive_client.py  whisperlive_client_reconnect.py  whisperlive_replay.py  (+2 more)
src/infrastructure/: CMakeLists.txt
src/infrastructure/include/rtt/infrastructure/: console_logger.hpp  console_transcript_sink.hpp  libsoundio_backend_probe.hpp  null_audio_source.hpp  static_audio_backend_probe.hpp  stub_transcript_engine.hpp  system_platform_info_provider.hpp
src/infrastructure/platform/macos/: README.md
src/infrastructure/platform/windows/: README.md
src/infrastructure/src/: console_logger.cpp  console_transcript_sink.cpp  libsoundio_backend_probe.cpp  null_audio_source.cpp  static_audio_backend_probe.cpp  stub_transcript_engine.cpp  system_platform_info_provider.cpp
test/: test_audio_chunk_debug_session.py  test_audio_pipeline_services.py  test_audio_processing.py  test_phase2_smoke.py  test_phase3_pipeline.py  test_pysoundio_runtime.py  test_realtime_transcription_session.py  test_wav_chunk_writer.py  test_wav_debug.py
tests/: CMakeLists.txt  feasibility_test.cpp  libsoundio_probe_test.cpp  smoke_test.cpp  test_advanced_enhancement.py  test_app_dispatch.py  test_capture_streams.py  test_config.py  test_core_engine.py  test_formatter_and_transcript_log.py  test_history.py  test_history_ui.py  test_live_session.py  test_main.py  test_onboarding.py  test_os_detector.py  test_permissions.py  test_preprocessing.py  test_sent_timeline.py  test_session_utils.py  test_settings_devices.py  test_status_ipc.py  test_tls.py  test_transcript_merger.py  test_ui_server.py  test_vad.py  test_vad_integration.py  test_version.py  test_version_enforcement.py  test_version_policy.py  test_whisper_engine.py  test_whisperlive_client.py  test_whisperlive_replay.py
(+59 files in other folders)
