cmake_minimum_required(VERSION 3.21)

project(realtime_transcriber LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(RTT_BUILD_TESTS "Build tests" ON)
option(RTT_ENABLE_LIBSOUNDIO "Build with vendored libsoundio" ON)

if(RTT_ENABLE_LIBSOUNDIO)
  set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
  set(BUILD_STATIC_LIBS ON CACHE BOOL "" FORCE)
  set(BUILD_DYNAMIC_LIBS OFF CACHE BOOL "" FORCE)
  set(BUILD_EXAMPLE_PROGRAMS OFF CACHE BOOL "" FORCE)
  set(BUILD_TESTS OFF CACHE BOOL "" FORCE)

  if(WIN32)
    set(ENABLE_WASAPI ON CACHE BOOL "" FORCE)
    set(ENABLE_COREAUDIO OFF CACHE BOOL "" FORCE)
    set(ENABLE_ALSA OFF CACHE BOOL "" FORCE)
    set(ENABLE_PULSEAUDIO OFF CACHE BOOL "" FORCE)
    set(ENABLE_JACK OFF CACHE BOOL "" FORCE)
  elseif(APPLE)
    set(ENABLE_WASAPI OFF CACHE BOOL "" FORCE)
    set(ENABLE_COREAUDIO ON CACHE BOOL "" FORCE)
    set(ENABLE_ALSA OFF CACHE BOOL "" FORCE)
    set(ENABLE_PULSEAUDIO OFF CACHE BOOL "" FORCE)
    set(ENABLE_JACK OFF CACHE BOOL "" FORCE)
  else()
    set(ENABLE_WASAPI OFF CACHE BOOL "" FORCE)
    set(ENABLE_COREAUDIO OFF CACHE BOOL "" FORCE)
    set(ENABLE_ALSA ON CACHE BOOL "" FORCE)
    set(ENABLE_PULSEAUDIO ON CACHE BOOL "" FORCE)
    set(ENABLE_JACK OFF CACHE BOOL "" FORCE)
  endif()

  add_subdirectory(vendor/libsoundio EXCLUDE_FROM_ALL)
endif()

add_subdirectory(src/domain)
add_subdirectory(src/application)
add_subdirectory(src/infrastructure)
add_subdirectory(apps/cli)

if(RTT_BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
