[project]
name = "multi-transcriber"
version = "0.1.0"
description = "Multiplatform real-time meeting transcriber foundation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "pyobjc-framework-ScreenCaptureKit>=10.0; sys_platform == 'darwin'",
    "soundcard>=0.4.6",
    "scipy>=1.15.3",
    "openai-whisper>=20250625",
    "numba>=0.62",
    "websocket-client>=1.8",
    "PySide6>=6.6",
    "onnxruntime>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["."]
